# nihongo-study-gpt-agent

./: .gitignore  Cargo.toml  README.md  temp  temp.json
api/: Cargo.toml  README.md  temp
api/src/: main.rs
api/src/services/: data.rs
data/: Cargo.toml
data/src/: lib.rs
data/src/models/: db.rs  mod.rs  oai.rs  requests.rs
data/src/services/: data.rs
services/: Cargo.toml
services/src/: lib.rs  oai.rs
src/: main.rs
worker/: Cargo.toml
worker/src/: main.rs
