[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data = { path="../data" }

serde = {workspace = true}
serde_json = {workspace = true}
dotenv = {workspace = true}
anyhow = {workspace = true}

async-openai = "0.18.3"
