[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data = { path="../data" }

reqwest = { version = "0.11.23", features = ["json"] }

serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenv = {workspace = true}
anyhow = {workspace = true}
rand = "0.8.5"
